--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,6 +1,3 @@
-<div>
-  <h1>
-    Bem-Vindo ao App!
-  </h1>
-  <app-value></app-value>
-</div>
+<app-nav></app-nav>
+<app-home></app-home>
+<app-value></app-value>
