--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -26,7 +26,7 @@
     </div>
 
     <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
-      <input id="usermail" [(ngModel)]="user.UserEmail" class="form-control mr-sm-2" name="usermail"
+      <input id="usermail" [(ngModel)]="user.userEmail" class="form-control mr-sm-2" name="usermail"
         placeholder="Usermail" #usermail="ngModel" type="text" required email>
       <input id="password" [(ngModel)]="user.password" class="form-control mr-sm-2" name="password"
         placeholder="Password" #password="ngModel" type="password" required minlength="8">
