--- a/DatingApp-SPA/src/app/register/register.component.html
+++ b/DatingApp-SPA/src/app/register/register.component.html
@@ -3,11 +3,11 @@
   <hr>
 
   <div class="form-group">
-    <input [(ngModel)]="user.UserEmail" name="UserEmail" required type="text" email class="form-control" placeholder="Email">
+    <input [(ngModel)]="user.userEmail" name="UserEmail" required type="text" email class="form-control" placeholder="Email">
   </div>
 
   <div class="form-group">
-    <input [(ngModel)]="user.Username" name="Usernam" required type="text" class="form-control" placeholder="Name">
+    <input [(ngModel)]="user.username" name="Usernam" required type="text" class="form-control" placeholder="Name">
   </div>
 
   <div class="form-group">
