--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="col-sm-4">
       <div class="card">
-        <img class="card-img-top img-thumbnail" src="{{user.photoUrl}}" alt="{{user.knownAs}}">
+        <img class="card-img-top img-thumbnail" src="{{photoUrl}}" alt="{{user.knownAs}}">
         <div class="card-body">
           <div>
             <strong>Location:</strong>
@@ -31,7 +31,8 @@
         </div>
         <div class="card-footer">
           <div class="btn-group d-flex">
-            <button form="editForm" [disabled]="!editForm.dirty" class="btn btn-success ml-1 w-100"> Save Changes </button>
+            <button form="editForm" [disabled]="!editForm.dirty" class="btn btn-success ml-1 w-100"> Save Changes
+            </button>
           </div>
         </div>
       </div>
@@ -57,7 +58,8 @@
             </form>
           </tab>
           <tab heading="Edit Photos">
-            <p>Photos edit go here</p>
+            <app-photo-editor (getMemberPhotoChange)="updateMainPhoto($event)" 
+                              [photos]="user.photos"></app-photo-editor>
           </tab>
           <tab heading="Photos">
           </tab>
